--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     @media (max-width: 768px) {
       html, body {
         overflow-y: auto;
-        scroll-snap-type: none;
+        scroll-snap-type: y mandatory;
       }
     }
 
