--- a/love1.html
+++ b/love1.html
@@ -550,11 +550,13 @@
       body {
         overflow-y: auto !important;
         height: auto;
+        scroll-snap-type: y mandatory;
       }
       
       html {
         height: auto;
         overflow-y: auto;
+        scroll-snap-type: y mandatory;
       }
     }
   </style>
