Fix mobile scrolling: increase bottom padding for contact and info sections to prevent content from being hidden behind mobile browser search bar

--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,7 @@
       /* Fix contact section for mobile */
       #contact-section {
         min-height: auto;
-        padding: 2rem 0 1rem 0;
+        padding: 2rem 0 6rem 0;
         align-items: center;
       }
       
@@ -1224,7 +1224,7 @@
       .info-section {
         min-height: 35vh !important;
         height: auto !important;
-        padding: 0 0 2vw 0 !important;
+        padding: 0 0 8rem 0 !important;
       }
       .info-content {
         padding: 6vw 0 2vw 0 !important;
