Fix word hyphenation: prevent words from being broken across lines on mobile devices by adding word-break: normal, hyphens: none, and overflow-wrap: normal to subtitle classes

--- a/index.html
+++ b/index.html
@@ -721,6 +721,9 @@
       text-align: left;
       line-height: 1.05;
       pointer-events: auto;
+      word-break: normal;
+      hyphens: none;
+      overflow-wrap: normal;
     }
     .hero-overlay .hero-coming-soon {
       color: #fff;
@@ -781,6 +784,9 @@
       color: #000;
       -webkit-text-stroke: 0.5px #fff;
       text-stroke: 0.5px #fff;
+      word-break: normal;
+      hyphens: none;
+      overflow-wrap: normal;
     }
     .feature-overlay-content .feature-link {
       font-size: 2vw;
@@ -831,6 +837,9 @@
       -webkit-text-stroke: 2px #000;
       text-stroke: 2px #000;
       text-align: center;
+      word-break: normal;
+      hyphens: none;
+      overflow-wrap: normal;
     }
     .community-overlay .community-bottom {
       width: 100%;
@@ -1161,6 +1170,9 @@
       }
       .hero-overlay .hero-subtitle {
         font-size: 1.8rem;
+        word-break: normal !important;
+        hyphens: none !important;
+        overflow-wrap: normal !important;
       }
       
       /* Fix contact section for mobile */
@@ -1202,12 +1214,18 @@
       }
       .feature-overlay-content .feature-subtitle {
         font-size: 1.7rem !important;
+        word-break: normal !important;
+        hyphens: none !important;
+        overflow-wrap: normal !important;
       }
       .community-overlay .community-title {
         font-size: 2.8rem !important;
       }
       .community-overlay .community-subtitle {
         font-size: 1.7rem !important;
+        word-break: normal !important;
+        hyphens: none !important;
+        overflow-wrap: normal !important;
       }
       .horror-title {
         font-size: 3rem !important;
