Update community page link and fix word hyphenation across all pages

--- a/community.html
+++ b/community.html
@@ -576,7 +576,7 @@
       <div class="love1-left">
         <div class="love1-title">#COMMUNITYFILM</div>
         <div class="love1-subtitle">real-time, democratically directed</div>
-        <a class="love1-btn" href="https://forms.gle/fAeMVm7oPnnouDh46" target="_blank" rel="noopener">submit footage</a>
+        <a class="love1-btn" href="https://www.instagram.com/communityfilm25/" target="_blank" rel="noopener">follow</a>
       </div>
       <div class="love1-right">
         <div class="love1-desc">a real-time, community-driven film experience built for social-media with custom editing software.</div>
