--- a/index.html
+++ b/index.html
@@ -1308,8 +1308,8 @@ a, a:hover, a:active, a:focus {
         </div>
         <div class="community-square"></div>
         <div class="community-bottom">
-          <a class="community-link" href="community">SUBMIT FOOTAGE</a>
-          <div class="community-credit">(FREE CINEMATOGRAPHY CREDIT)</div>
+          <a class="community-link" href="community">FOLLOW</a>
+          <div class="community-credit">(FREE DIRECTORAL CREDIT)</div>
         </div>
       </div>
     </div>
