--- a/lovers.html
+++ b/lovers.html
@@ -271,7 +271,11 @@
       .love1-left, .love1-right { min-width: 0; width: 100%; margin-top: 0; }
       .love1-title { font-size: 2rem; }
       .love1-subtitle { font-size: 1.2rem; }
-      .love1-btn { font-size: 1rem; padding: 0.8rem 2rem; }
+      .love1-btn { 
+        font-size: 1rem; 
+        padding: 0.8rem 2rem; 
+        transition: none !important;
+      }
       .love1-desc { font-size: 1.2rem; max-width: 100%; }
     }
     @media (max-width: 600px) {
@@ -346,6 +350,7 @@
         width: 100%;
         box-sizing: border-box;
         border-radius: 1.2rem;
+        transition: none !important;
       }
       .love1-desc {
         font-size: 1.3rem;
@@ -365,6 +370,7 @@
         border-radius: 2rem !important;
         text-align: center;
         text-transform: uppercase;
+        transition: none !important;
       }
       .info-section {
         min-height: 40vh;
