--- a/love1.html
+++ b/love1.html
@@ -276,6 +276,12 @@
         padding: 0.8rem 2rem; 
         transition: none !important;
       }
+      .love1-btn:hover {
+        background: #111 !important;
+        color: #fff !important;
+        border: 1.5px solid #111 !important;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.09) !important;
+      }
       .love1-desc { font-size: 1.2rem; max-width: 100%; }
     }
     @media (max-width: 600px) {
@@ -352,6 +358,12 @@
         border-radius: 1.2rem;
         transition: none !important;
       }
+      .love1-btn:hover {
+        background: #111 !important;
+        color: #fff !important;
+        border: 1.5px solid #111 !important;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.09) !important;
+      }
       .love1-desc {
         font-size: 1.3rem;
         max-width: 100%;
@@ -371,6 +383,12 @@
         text-align: center;
         text-transform: uppercase;
         transition: none !important;
+      }
+      .back-btn:hover {
+        background: #fff !important;
+        color: #111 !important;
+        border: 1.5px solid #111 !important;
+        opacity: 0.92 !important;
       }
       .info-section {
         min-height: 40vh;
