--- a/love1.html
+++ b/love1.html
@@ -281,6 +281,8 @@
         color: #fff !important;
         border: 1.5px solid #111 !important;
         box-shadow: 0 2px 10px rgba(0,0,0,0.09) !important;
+        font-size: 1rem !important;
+        padding: 0.8rem 2rem !important;
       }
       .love1-desc { font-size: 1.2rem; max-width: 100%; }
     }
@@ -363,6 +365,8 @@
         color: #fff !important;
         border: 1.5px solid #111 !important;
         box-shadow: 0 2px 10px rgba(0,0,0,0.09) !important;
+        font-size: 1.3rem !important;
+        padding: 1rem 2.2rem !important;
       }
       .love1-desc {
         font-size: 1.3rem;
@@ -389,6 +393,8 @@
         color: #111 !important;
         border: 1.5px solid #111 !important;
         opacity: 0.92 !important;
+        font-size: 1.2rem !important;
+        padding: 1rem 2.2rem !important;
       }
       .info-section {
         min-height: 40vh;
